# RAG_VOICE_AGENT

./: .dockerignore  .env.dev.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: main.py
app/agent/: agent.py  rag_agent.py
app/api/v1/: api.py
app/api/v1/endpoints/: chat.py  files.py  voice.py
app/core/: config.py  memory.py  rag.py  security.py  users.py
app/database/: mongo.py
app/models/: users.py
app/schemas/: user.py
app/users/: dependencies.py  manager.py
app/voice/: dependencies.py  sentence_buffer.py  stt.py  tts.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  Login.tsx  VoiceAgent.tsx  index.css
